--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "fmt": "prettier --write src/**/*.{html,css,js,ts,tsx,jsx}"
   },
   "dependencies": {
+    "@netlify/plugin-nextjs": "^4.41.3",
     "clsx": "^2.1.0",
     "next": "14.2.1",
     "nodemailer": "^6.9.13",
