--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@netlify/plugin-nextjs": "^4.41.3",
+    "axios": "^1.6.8",
     "clsx": "^2.1.0",
     "next": "14.2.1",
     "nodemailer": "^6.9.13",
