--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,8 @@ yarn-error.log*
 # local env files
 .env*.local
 
+portfolio-ip-post-firebase-adminsdk-umnlz-fd511fae76.json
+
 # vercel
 .vercel
 
