--- a/.prettierrc
+++ b/.prettierrc
@@ -2,6 +2,9 @@
   "printWidth": 100,
   "tabWidth": 2,
   "useTabs": false,
-  "plugins": ["prettier-plugin-tailwindcss"],
-  "tailwindFunctions": ["clsx"]
+
+  "plugins": ["prettier-plugin-tailwindcss", "prettier-plugin-organize-imports"],
+  "tailwindFunctions": ["clsx"],
+  "trailingComma": "all",
+  "singleQuote": true
 }
