--- a/package.json
+++ b/package.json
@@ -18,10 +18,7 @@
     "next": "14.2.1",
     "nodemailer": "^6.9.13",
     "react": "^18",
-    "react-dom": "^18",
-    "sqlite": "^5.1.1",
-    "sqlite3": "^5.1.7",
-    "uuid": "^9.0.1"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
