--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@netlify/plugin-nextjs": "^4.41.3",
     "axios": "^1.6.8",
     "clsx": "^2.1.0",
-    "next": "13.4.19",
+    "next": "^14.2.4",
     "nodemailer": "^6.9.13",
     "react": "^18",
     "react-dom": "^18"
@@ -31,7 +31,7 @@
     "@typescript-eslint/parser": "^7.7.0",
     "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
-    "eslint-config-next": "13.4.19",
+    "eslint-config-next": "^14.2.4",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-tailwindcss": "^3.15.1",
     "firebase-admin": "^12.1.1",
